--- a/ansible/roles/epics-tools/tasks/install_java.yml
+++ b/ansible/roles/epics-tools/tasks/install_java.yml
@@ -19,7 +19,7 @@
 - name: install open jdk 17
   become: true
   ansible.builtin.unarchive:
-    src: https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.10%2B7/OpenJDK17U-jdk_x64_linux_hotspot_17.0.10_7.tar.gz
+    src: "https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.10%2B7/OpenJDK17U-jdk_{{ ansible_facts['architecture'] }}_linux_hotspot_17.0.10_7.tar.gz"
     dest: "{{ java_home }}"
     remote_src: yes
     owner:  "{{ epics_services_account }}"
